--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 </div>
 </header>
 <body>
-
+<section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, fugit possimus. Labore, sit. Ratione dolor eveniet ipsam veniam architecto neque dolorem, labore, quo officiis id, vitae doloribus rem delectus voluptatibus voluptates nam. Accusamus nemo, est quasi libero odio, doloremque tempora officiis natus ex ipsum vitae alias? Quia repudiandae cum maxime?</p>
+</section>
 </body>
 <footer>
 
