--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Open+Sans&display=swap"
         rel="stylesheet">
+        <script src="https://kit.fontawesome.com/3f5f050e51.js" crossorigin="anonymous"></script>
 </head>
 <header class="header">
     <nav>
@@ -26,20 +27,149 @@
     <div>
         <h2 class="banner-sub-tittle">Hi, I am </h2>
     <h1 class="banner-tittle">Dibayndu Das</h1>
-    <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolorum illo, autem reprehenderit aspernatur deserunt assumenda est numquam doloremque asperiores voluptatem, expedita esse modi molestias veritatis totam veniam quia, cupiditate necessitatibus obcaecati aliquam aut quod alias. Nihil maiores expedita sed.</p>
-    <button class="btn-primary">Download Resume</button>
+    <p class="banner-description">As a Junior web developer, I'm passionate about crafting user-friendly websites. Proficient in HTML, CSS, and JavaScript, I strive to create engaging digital experiences that blend creativity and functionality. Excited to learn and grow in the ever-evolving world of web development.</p>
+    <button class="btn-primary"><i class="fa-solid fa-download"></i> Resume</button>
+    <button class="btn-secondary"> <i class="fa-solid fa-phone"></i> Contact</button>
     </div>
-    <img src="images/hardy.png" alt="">
+    <img src="images/dib-removebg-preview.png" alt="">
 </div>
 </header>
 <body>
 <section class="about">
         <h3 class="section-title">About Me</h3>
-        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, fugit possimus. Labore, sit. Ratione dolor eveniet ipsam veniam architecto neque dolorem, labore, quo officiis id, vitae doloribus rem delectus voluptatibus voluptates nam. Accusamus nemo, est quasi libero odio, doloremque tempora officiis natus ex ipsum vitae alias? Quia repudiandae cum maxime?</p>
+        <p class="section-description">In my journey as a junior web developer, I'm eagerly looking forward to an exciting and dynamic future. I aim to continually expand my skill set, mastering new technologies and frameworks. Collaborating with experienced professionals, I aspire to contribute to innovative web projects, enhancing user experiences and solving real-world problems. With each line of code I write, I'm building a foundation for a rewarding career in web development, where I hope to play a key role in shaping the digital landscape of tomorrow.</p>
+        <div class="about-info-container">
+            <div class="about-info">
+                <p class="info-title">Name:</p>
+                <p class="info-description">Dibayndu Das</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">E-mail:</p>
+                <p class="info-description">dibayndu.ca@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">Speciality:</p>
+                <p class="info-description">Designing & Developing</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">Location:</p>
+                <p class="info-description">Windsor, ON</p>
+            </div>
+        </div>
+</section>
+<section class="what-i-do">
+<h3 class="section-title">What I Do ?</h3>
+<div class="skills-container">
+    <div class="skill">
+        <img src="images/icons/react.png" alt="">
+        <p class="skill-title">React</p>
+        <p class="skill-description">React, a JavaScript library, simplifies building interactive user interfaces. Its component-based architecture, virtual DOM, and strong community support make it a powerful tool for modern web development.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/js.png" alt="">
+        <p class="skill-title">JavaScript</p>
+        <p class="skill-description">JavaScript is a versatile programming language for web development. It empowers interactive web pages, enhances user experiences, and supports both front-end and back-end development, making it essential in today's tech landscape.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/mongo.png" alt="">
+        <p class="skill-title">Mongo DB</p>
+        <p class="skill-description">MongoDB is a NoSQL database known for its flexibility and scalability. It stores data in JSON-like documents, enabling efficient handling of large volumes of unstructured or semi-structured data in modern applications.</p>
+    </div>
+    <div class="skill">
+        <img src="images/icons/nodejs.png" alt="">
+        <p class="skill-title">Node.js</p>
+        <p class="skill-description">Node.js is a runtime environment for executing JavaScript code outside of a web browser. It's widely used for server-side programming, offering high performance and non-blocking I/O for building scalable applications.</p>   
+    </div>
+</div>
+</section>
+<!-- resume section -->
+
+<section class="resume">
+    <h3 class="section-title">A Summary Of My Resume</h3>
+    <div class="resume-content">
+        <div>
+            <h3 class="resume-title">My Education</h3>
+            <div class="resume-item">
+                <h4 class="title">Bachelor in HRM</h4>
+                <h5 class="sub-title">Premier University | 2017</h5>
+                <p class="description">I successfully graduated with a Bachelor's degree in Human Resource Management, equipped with the skills to navigate the dynamic world of HR and contribute to organizational success.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Professional Course in Web Development</h4>
+                <h5 class="sub-title">Programming Hero | 2021</h5>
+                <p class="description">Embarking on my journey as a beginner web developer, I'm eager to learn and create. With passion and dedication, I aim to build a solid foundation in web development.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Meta Front-End Developer Professional Certificate</h4>
+                <h5 class="sub-title">Coursera</h5>
+                <p class="description">Beginning my journey with the Meta Front-End Developer Professional Certificate, I'm excited to gain industry-relevant skills and shape a career in cutting-edge front-end development.</p>
+            </div>
+        </div>
+        <div>
+            <h3 class="resume-title">My Experience</h3>
+            <div class="resume-item">
+                <h4 class="title">My Portfolio</h4>
+                <h5 class="sub-title">HTML & CSS</h5>
+                <p class="description">I crafted my portfolio using HTML and CSS, blending aesthetics and functionality. It showcases my skills and projects, making a strong impression in the digital world.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Be Foody</h4>
+                <h5 class="sub-title">HTML, CSS, JAVASCRIPT</h5>
+                <p class="description">I developed a food delivery website using HTML, CSS, and JavaScript. This interactive platform offers seamless ordering, enhancing the culinary experience for customers and restaurants alike.</p>
+            </div>
+            <hr>
+            <div class="resume-item">
+                <h4 class="title">Healthcare</h4>
+                <h5 class="sub-title">React.JS</h5>
+                <p class="description">
+                    I created a dynamic healthcare website with HTML, CSS, JavaScript, and React.js. This platform offers comprehensive medical information and services, prioritizing user health and well-being.</p>
+            </div>
+        </div>
+    </div>
+    <div class="resume-button">
+        <button class="btn-primary"> <i class="fa-solid fa-download"></i>  Download CV</button>
+    </div>
+</section>
+<!-- contact section -->
+<section class="contact">
+    <div>
+        <h3 class="section-title">Let's Connect</h3>
+        <p class="contact-description">I wanted to connect with you as a fellow web developer because I've been truly impressed by your contributions to the field. Your portfolio showcases a diverse range of projects, each displaying a high level of skill and creativity. I believe that engaging with someone of your expertise can offer invaluable insights and mentorship to accelerate my growth as a junior web developer.
+            <br>
+            <br>
+
+            Your work not only demonstrates technical proficiency but also a deep understanding of user experience and design principles, which I'm keen to learn from. Your commitment to creating user-centric and visually appealing web solutions aligns with my own aspirations in this field.
+            
+            I'm excited about the possibility of collaborating, sharing knowledge, and embarking on web development endeavors together. Your experience and dedication make you an ideal mentor and collaborator, and I'm eager to learn from your expertise.
+        </p>
+        <a href="">
+            <img src="images/icons/facebook.png" alt="" srcset="">
+        </a>
+        <a href="">
+            <img src="images/icons/insta.png" alt="" srcset="">
+        </a>
+        <a href="">
+            <img src="images/icons/twitter.png" alt="" srcset="">
+        </a>
+    </div>
+    <div>
+        <h3 class="section-title">Let's Message Me</h3>
+        <form action="">
+            <input type="text" name="" id="" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            <input class="btn-primary" type="submit" value="Submit">
+        </form>
+    </div>
 </section>
 </body>
-<footer>
-
+<!-- footer section start -->
+<footer class="footer">
+    <h5>Crafting the digital future, one line of code at a time.</h5>
+    <h6>Copyright © Dibayndu Das 2023 - All Rights Reserved.</h6>
 </footer>
 
 </html>
