--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
 <!--banner start-->
 <div class="banner">
-    <div>
+    <div class="banner-content">
         <h2 class="banner-sub-tittle">Hi, I am </h2>
     <h1 class="banner-tittle">Dibayndu Das</h1>
     <p class="banner-description">As a Junior web developer, I'm passionate about crafting user-friendly websites. Proficient in HTML, CSS, and JavaScript, I strive to create engaging digital experiences that blend creativity and functionality. Excited to learn and grow in the ever-evolving world of web development.</p>
@@ -157,7 +157,7 @@
     </div>
     <div>
         <h3 class="section-title">Let's Message Me</h3>
-        <form action="">
+        <form class="form">
             <input type="text" name="" id="" placeholder="Your Name">
             <input type="email" name="" id="" placeholder="Your Email">
             <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
